2009-03-02  Alan Modra  <amodra@bigpond.net.au>

	2009-01-22  Alan Modra  <amodra@bigpond.net.au>
	PR 6832
	* dwarf2.c (find_line): Don't update stash->sec_info_ptr until
	after comp_unit_find_line call.

	2009-01-14  Alan Modra  <amodra@bigpond.net.au>
	PR 9735
	* syms.c (_bfd_stab_section_find_nearest_line): Don't free
	saved filename, use bfd_alloc rather than bfd_malloc for it.

	2009-01-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
	* elflink.c (_bfd_elf_section_already_linked): Handle g++-3.4
	relocations in `.gnu.linkonce.r.*' referencing its `.gnu.linkonce.t.*'.

	2008-12-11  Alan Modra  <amodra@bigpond.net.au>
	PR 7041
	* elf64-ppc.c (func_desc_adjust): Correct logic making fake function
	descriptors.  Similarly correct making function descriptors dynamic.

	2008-11-14  Nathan Sidwell  <nathan@codesourcery.com>
	* elf.c (assign_file_positions_for_load_sections): Use header_size
	to avoid moving the load address of file headers.
	(assign_file_positions_for_load_sections): Set header_size for
	segments containing the file header.

	2008-11-13  Hans-Peter Nilsson  <hp@axis.com>
	PR ld/7028
	* elf.c (assign_file_positions_for_load_sections): Allocate phrds
	with bfd_zalloc2 instead of bfd_alloc2.  For the amount, use
	the possibly-preset header-size, not the computed one.

	2008-11-13  Alan Modra  <amodra@bigpond.net.au>
	PR 7023
	* elf.c (bfd_section_from_shdr <SHT_SYMTAB>): Fail on invalid sh_info.

	2008-11-11  Alan Modra  <amodra@bigpond.net.au>
	PR 7012
	* dwarf2.c (find_line): Don't keep stale pointers into realloc'd
	memory.  Return on errors.  Fix memory leak.
	(_bfd_dwarf2_cleanup_debug_info): Free dwarf_str_buffer.

	2008-10-10  Nathan Froyd  <froydnj@codesourcery.com>
	* elf32-ppc.c (ppc_elf_merge_obj_attributes): Merge
	Tag_GNU_Power_ABI_Struct_Return.

	2008-10-03  Alan Modra  <amodra@bigpond.net.au>
	* elf.c (bfd_elf_set_group_contents): Assign sh_info for ld -r when
	the signature symbol is global.