@@ -1,5 +1,11 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2009-01-26  Nathan Sidwell  <nathan@codesourcery.com>
+	* ld-powerpc/powerpc.exp: Add vxworks relax testcase.
+	* ld-powerpc/vxworks-relax.s, ld-powerpc/vxworks-relax.rd: New.
+	* ld-powerpc/vxworks1.ld: Add .pad and .far input sections.
+	* ld-powerpc/vxworks1.rd: Correct regexp for undefined symbols.
+
 	2009-01-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
 	* ld-elf/linkoncerdiff.d, ld-elf/linkoncerdiff1.s,
 	ld-elf/linkoncerdiff2.s: New.
