@@ -1,5 +1,11 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2009-01-26  Nathan Sidwell  <nathan@codesourcery.com>
+	* elf32-ppc.c (ppc_elf_relax_section): Add space for relocs
+	describing the trampolines.
+	(ppc_elf_relocate_section): Update relocs to describe the
+	trampolines.
+
 	2009-01-22  Alan Modra  <amodra@bigpond.net.au>
 	PR 6832
 	* dwarf2.c (find_line): Don't update stash->sec_info_ptr until
